--- a/media.sass
+++ b/media.sass
@@ -2,6 +2,7 @@
     .header
         width: auto
         height: 90px
+        z-index: 11
         &__wrapper
             width: 345px
             height: 60px
@@ -11,7 +12,7 @@
             padding: 0px
             margin: 0px
             width: 60px
-            margin-right: 61.739999999999995px
+            margin-right: 61.74px
         &__nav-bar
             .nav
                 width: 20px
@@ -20,39 +21,101 @@
                     display: none
                     &:last-child
                         display: block
+                &__search-icon
+                    padding-top: 1px
             .nav-icons
                 width: 168px
                 &__item:nth-child(2)
                     display: none
                 &__item:nth-child(3)
                     display: none
+                .nav-icons__icon--first
+                    width: 20px
+                    margin-left: -3px
+
+                .burger-button
+                    display: flex
+                    background-color: #F9F9F9
+                    width: 49px
+                    height: 49px
+                    border-radius: 50%
+                    padding-bottom: 2.5px
+                    cursor: pointer
+                    .nav-icons__icon-wrapper
+                        position: static
+    .burger-menu
+        display: block
+        position: fixed
+        z-index: 10
+        top: -100%
+        padding-bottom: 64px
+        padding-top: 146px
+        background-color: #FFFFFF
+        transition: 0.9s
+        .nav
+            padding-left: 38px
+            width: 375px
+            height: 270px
+            display: flex
+            gap: 45px
+            justify-content: space-between
+            flex-direction: column
+            background-color: #FFFFFF
+
+    .burger-menu--active
+        top: 0px
+    .shadow-wrapper
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-color: rgba(0, 0, 0, 0.5)
+        z-index: 4
+        pointer-events: none
+        opacity: 0
+        transition: 0.7s
+        &--show
+            opacity: 1
+
+
     .slider
         margin-top: 10px
         height: auto
         &__wrapper
-            width: 345px
             display: flex
             flex-direction: column
             height: 868.4px
+            width: 100%
+
         &__dell-backgraund
             top: 98px
             width: 293px
             left: 17px
         .slider-block
-            width: 345px
-            height: 503px
-            overflow: visible
+            width: 95%
+            height: 100%
             margin: 0px
             padding: 0px
-            margin-left: 15px
             margin-top: 80px
+            &__line
+                margin-left: 30px
             &__controller
-                display: none
+                z-index: 3
+                top: 10px
+                width: 64px
+        
+            .controller
+                top: 560px
+                right: 95px
+                gap: 8px
+                
             .card
                 width: 345px
                 height: 503px
                 flex-direction: column
                 margin: 0px
+                z-index: 2
                 &__wrapper
                     padding-top: 80px
                     margin: 0px
@@ -76,7 +139,7 @@
                     margin-left: -15px
                     letter-spacing: 0.01px
         .profitable-offer
-            left: -15px
+            left: 0px
             top: 673px
             width: 375px
             height: 196px
@@ -567,39 +630,89 @@
         &__logo
             padding: 0px
             height: 71.29px
-            margin: 30.55px 150px 28px 150px
+            margin: 30px 148px -6px 137px
         .nav
             margin:0px
             padding: 0px
             gap: 30px 50px
             flex-wrap: wrap
+            padding-bottom: 18px
             &__list-title
                 font-weight: 400
                 font-size: 18px
                 line-height: 21px
             &__list-wrapper
+                
                 &--first
                     order: 3
+                    .nav__item
+                        width: 123px
                     .nav__list
+                        gap: 9.7px 58px
+                        align-items: center
                         width: auto
-                        height: 106px
+                        height: 83px
                         display: flex
                         flex-wrap: wrap
-                    .nav__item:nth-child(2)
-                        order: 1
-                    .nav__item:last-child()
-                        order: 2
+                        .nav__item:nth-child(2)
+                            order: -2
+                            line-height: 100%
+                        .nav__item:nth-child(5)
+                            order: -1
+                            line-height: 100%
                 &--second
                     order: 2
+                    margin-left: -14px
                 &--third
                     order: 1
+                    
             &__list
                 width: 145px
+                
             &__item
+                margin-left: 1px
+                letter-spacing: -0.1px
                 font-size: 15px
                 line-height: 18px
                 display: flex
                 flex-wrap: wrap
-                
+            
+        .contact-us
+            height: 290px
+            &__list
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+                margin-top: 31px
+            &__item
+                height: 43px
+                display: flex
+                &--first
+                    margin:0
+                    margin-bottom: 20px
+                &--second
+                    margin:0
+                    margin-bottom: 27px
+                &--third
+                    margin:0
+                    margin-bottom: 0px
+                    .contact-us__title
+                        margin-bottom: 0px
+
+            &__title
+                font-size: 15px
+                line-height: 20px
+                text-align: left
+                margin-bottom: 1px
+            &__description
+                font-size: 15px
+                line-height: 22px
+                margin-left: 1px
 
 
+            .social
+                margin-left: 1px
+                margin-top: 23px
+                width: 87.71px
+                &__icon
+                    height: 30.18px
