--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,7 +162,7 @@ body {
 .header {
   top: 0px;
   position: fixed;
-  z-index: 4;
+  z-index: 5;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
   background: #FFFFFF;
@@ -232,6 +232,24 @@ body {
   border-radius: 50%;
   padding-bottom: 2.5px;
   cursor: pointer;
+  position: relative;
+}
+.header__nav-bar .nav-icons .burger-button {
+  display: none;
+  position: static;
+  z-index: 2;
+  gap: 6px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.header__nav-bar .nav-icons .burger-button__element {
+  width: 18px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: 1px solid #292D32;
 }
 .header__nav-bar .nav-icons__status-icon {
   width: 16px;
@@ -248,6 +266,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.header__nav-bar .nav-icons__icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.burger-menu {
+  display: none;
 }
 
 .slider {
@@ -301,6 +330,7 @@ body {
   width: 1021px;
   height: 555px;
   margin-left: 130px;
+  position: relative;
   overflow: hidden;
 }
 .slider .slider-block__controller {
@@ -309,6 +339,8 @@ body {
 }
 .slider .slider-block__line {
   display: flex;
+  position: absolute;
+  transition: 1s;
 }
 .slider .slider-block__line .card {
   display: flex;
@@ -338,11 +370,12 @@ body {
   margin-bottom: 60px;
 }
 .slider .controller {
+  z-index: 4;
   display: flex;
   gap: 10px;
   align-items: center;
   position: absolute;
-  right: 289px;
+  right: 40px;
   bottom: 115px;
 }
 .slider .controller__button {
@@ -1071,6 +1104,9 @@ body {
 .about-us .request .link__description {
   color: #FFFFFF;
 }
+.about-us .request .link {
+  padding-left: 0px;
+}
 
 .footer {
   width: 100%;
@@ -1102,7 +1138,7 @@ body {
   flex-direction: column;
 }
 .footer .nav__list-wrapper--second {
-  margin-left: -4px;
+  margin-left: 2.3px;
 }
 .footer .nav__list-title {
   font-weight: 400;
@@ -1129,7 +1165,7 @@ body {
   font-size: 16px;
   line-height: 19px;
   color: #292D32;
-  letter-spacing: 0.19px;
+  letter-spacing: -0.1px;
 }
 .footer .nav__item:hover {
   color: #000000;
