--- a/styles.sass
+++ b/styles.sass
@@ -174,7 +174,7 @@ body
         &__line
             display: flex
             position: absolute
-            transition: 1s
+            transition: all 0.8s ease-in-out
             .card
                 display: flex
                 &__img
