--- a/styles.sass
+++ b/styles.sass
@@ -11,7 +11,6 @@ body
     font-size: 15px
     line-height: 18px
 
-    background: #969696
 
 .header
     top: 0px
@@ -126,6 +125,7 @@ body
     height: 683px
     background-color: #F2F2F2
     position: relative
+    overflow: hidden
     &__wrapper
         margin: 0 auto
         position: relative  
@@ -388,7 +388,7 @@ body
     &__wrapper
         position: relative
         padding-top: 87px
-        width: 1920px
+        width: 100%
         margin: 0 auto
     &__best-quelity-backgraund
         position: absolute
@@ -479,7 +479,7 @@ body
     background: #F5F5F5
     width: 100%
     &__wrapper
-        width: 1401px
+        width: 1400px
         margin: 0 auto
         padding-top: 177px
         padding-bottom: 526px
@@ -614,7 +614,7 @@ body
     height: 676px
     background-color: #EEEEEE
     &__wrapper
-        width: 1920px
+        width: 100%
         margin: 0 auto
         position: relative
     &__backgraund
