--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,7 +156,6 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
-  background: #969696;
 }
 
 .header {
@@ -285,6 +284,7 @@ body {
   height: 683px;
   background-color: #F2F2F2;
   position: relative;
+  overflow: hidden;
 }
 .slider__wrapper {
   margin: 0 auto;
@@ -591,7 +591,7 @@ body {
 .benefits__wrapper {
   position: relative;
   padding-top: 87px;
-  width: 1920px;
+  width: 100%;
   margin: 0 auto;
 }
 .benefits__best-quelity-backgraund {
@@ -701,7 +701,7 @@ body {
   width: 100%;
 }
 .news__wrapper {
-  width: 1401px;
+  width: 1400px;
   margin: 0 auto;
   padding-top: 177px;
   padding-bottom: 526px;
@@ -862,7 +862,7 @@ body {
   background-color: #EEEEEE;
 }
 .about-us__wrapper {
-  width: 1920px;
+  width: 100%;
   margin: 0 auto;
   position: relative;
 }
